force-app/main/default/objects/Unified_File__c/Unified_File__c.object-meta.xml
<CustomObject>
    <label>Unified File</label>
    <nameField>
        <displayFormat>UF-{000000}</displayFormat>
        <label>File Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unified Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>