force-app/main/default/objects/Unified_File__c/fields/CreatedById__c.field-meta.xml
<CustomField>
    <fullName>CreatedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>File Created By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Unified_Files</relationshipName>
    <type>Lookup</type>
</CustomField>