force-app/main/default/objects/Unified_File__c/fields/CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate__c</fullName>
    <label> File Created Date</label>
    <type>DateTime</type>
</CustomField>