force-app/main/default/objects/Unified_File__c/fields/FileExtension__c.field-meta.xml
<CustomField>
    <fullName>FileExtension__c</fullName>
    <label>File Extension</label>
    <length>40</length>
    <type>Text</type>
</CustomField>