force-app/main/default/objects/Unified_File__c/fields/FileSizeKB__c.field-meta.xml
<CustomField>
    <fullName>FileSizeKB__c</fullName>
    <label>File Size KB</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>