force-app/main/default/objects/Unified_File__c/fields/HashKey__c.field-meta.xml
<CustomField>
    <fullName>HashKey__c</fullName>
    <externalId>true</externalId>
    <label>Hash Key</label>
    <length>64</length>
    <type>Text</type>
</CustomField>