force-app/main/default/objects/Unified_File__c/fields/IsArchived__c.field-meta.xml
<CustomField>
    <fullName>IsArchived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Archived</label>
    <type>Checkbox</type>
</CustomField>