force-app/main/default/objects/Unified_File__c/fields/IsContentNote__c.field-meta.xml
<CustomField>
    <fullName>IsContentNote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Content Note</label>
    <type>Checkbox</type>
</CustomField>