force-app/main/default/objects/Unified_File__c/fields/LastModifiedById__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>File Last Modified By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Unified_Files1</relationshipName>
    <type>Lookup</type>
</CustomField>