force-app/main/default/objects/Unified_File__c/fields/LatestVersionId__c.field-meta.xml
<CustomField>
    <fullName>LatestVersionId__c</fullName>
    <label>Latest Version Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>