force-app/main/default/objects/Unified_File__c/fields/ParentRecordId__c.field-meta.xml
<CustomField>
    <fullName>ParentRecordId__c</fullName>
    <label>Parent Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>