force-app/main/default/objects/Unified_File__c/fields/ParentRecordName__c.field-meta.xml
<CustomField>
    <fullName>ParentRecordName__c</fullName>
    <label>Parent Record Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>