force-app/main/default/objects/Unified_File__c/fields/ParentRecordType__c.field-meta.xml
<CustomField>
    <fullName>ParentRecordType__c</fullName>
    <label>Parent Record Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>