force-app/main/default/objects/Unified_File__c/fields/SnapshotDate__c.field-meta.xml
<CustomField>
    <fullName>SnapshotDate__c</fullName>
    <label>Snapshot Date</label>
    <type>Date</type>
</CustomField>