force-app/main/default/objects/Unified_File__c/fields/SourceType__c.field-meta.xml
<CustomField>
    <fullName>SourceType__c</fullName>
    <label>Source Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CONTENT_DOCUMENT</fullName>
            </value>
            <value>
                <fullName>ATTACHMENT</fullName>
            </value>
            <value>
                <fullName>CONTENT_NOTE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>