force-app/main/default/objects/Unified_File__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>FileTitle__c</columns>
    <columns>CreatedDate__c</columns>
    <columns>LastModifiedDate__c</columns>
    <columns>IsContentNote__c</columns>
    <columns>SourceType__c</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>